Fixes layout issues

--- a/style.css
+++ b/style.css
@@ -1,30 +1,62 @@
-body {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 25px;
+* {
+    box-sizing: border-box;
 }
 
-.expected-container {
+html {
+    height: 100%;
+}
+
+body {
+    width: 100%;
+    height: 100%;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 25px;
     display: flex;
-    flex-direction: column;
+    align-items: center;
+    justify-content: center;    
+}
+
+h2 {
+    font-size:25px;
 }
 
 .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-content: stretch;
+    max-width: 500px;
 }
 
 .container > * {
-    margin: 30px;
+    margin-top: 30px;
+}
+
+#expected {
+    width: calc(100% - 25px);
+}
+
+#expected-container {
+    display: flex;  
+    gap: 10px;  
 }
 
 .result{
     display: flex;
 }
 
+.conversion-row {
+    margin: 20px 0;
+    display: grid;
+    grid-column-gap: 10px;
+    grid-template-columns: 75px 1fr 25px 10px 1fr 25px;
+}
+
 input[type='text'],
 input[type='number']{
     font-size: 25px;
+    width: 100%;
+    padding: 0px;
+    text-align: right;
     font-family: 'Montserrat', sans-serif;
 }
